
    - Rewrote prime count caching and removed code duplication.
      Uses less memory at large sizes and is faster.

    - Error message "must be a positive integer" changed to
      "must be a non-negative integer" when zero is allowed.

    - More accurate semiprime_count_approx and nth_semiprime_approx.

    - Switched from Kahan to Neumaier sum in some real computations.

    [OTHER]

    - Legendre, Meissel, and Lehmer prime counting got rewritten to use our
      common code.  3x less code.  No longer buildable standalone.  Included
      by default, though still not called internally.

    - lucas_sequence(n,p,q,k) deprecated.  Use lucasuvmod(p,q,k,n) instead.

    - Documentation more consistent with 'positive' vs 'non-negative'.

    - valuation(n,k) now will error if k < 2.  This follows Pari and SAGE.
      undef is returned for n = 0.  Arguable "Inf" would be preferable.


0.73 2018-11-15

    [ADDED]

    - inverse_totient(n)              the image of euler_phi(n)

    [FIXES]

    - Try to work around 32-bit platforms in semiprime approximations.
      Cannot reproduce on any of my 32-bit test platforms.

    - Fix RT 127605, memory use in for... iterators.


0.72 2018-11-08

    [ADDED]

    - nth_semiprime(n)                the nth semiprime
    - nth_semiprime_approx(n)         fast approximate nth semiprime
    - semiprime_count_approx(n)       fast approximate semiprime count
    - semi_primes                     as primes but for semiprimes
    - forsetproduct {...} \@a,\@b,... Cartesian product of list refs

    [FIXES]

    - Some platforms are extremely slow for is_pillai.  Speed up tests.

    - Ensure random_factored_integer factor list is sorted min->max.

    - forcomposites didn't check lastfor on every callback.

    - Sun's compilers, in a valid interpretation of the code, generated
      divide by zero code for pillai testing.

    [FUNCTIONALITY AND PERFORMANCE]

    - chebyshev_theta and chebyshev_psi redone and uses a table.