@@ -245,6 +245,8 @@ Revision history for Perl module Math::Prime::Util
 
     - Switched from Kahan to Neumaier sum in some real computations.
 
+    - is_primitive_root faster.  Much faster for p^k and 2p^k with k >= 2.
+
     [OTHER]
 
     - Legendre, Meissel, and Lehmer prime counting got rewritten to use our
